search category by name and find id
